fix(LOC-2112): change dark mode hover color for IconCheckbox to work with any background

--- a/src/components/inputs/IconCheckbox/IconCheckbox.scss
+++ b/src/components/inputs/IconCheckbox/IconCheckbox.scss
@@ -10,7 +10,7 @@
 	justify-content: center;
 
 	&:hover {
-		@include theme-background-gray5-else-gray-dark50;
+		@include theme-background-gray5-else-black;
 		border-radius: 100%;
 	}
 }
